[package]
name = "intarsia"
version = "0.1.0"
authors = ["arturo <arturomf94@gmail.com>"]
edition = "2021"


[dependencies]
dirs = "3.0.2"
image = "0.24.2"
imageproc = "0.23.0"
thiserror = "1"
palette_extract = "0.1.0"
viuer = "0.6.1"
plotters = { git = "https://github.com/plotters-rs/plotters.git", default_features = false, features = [
        "bitmap_backend",
        "bitmap_encoder",
        "image",
] }
